// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProFormUpload 🏐 ProFormUploadButton support disable 1`] = `
<Button
  disabled={true}
>
  <Wave>
    <button
      className="ant-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <LoadingIcon
        existIcon={false}
        loading={false}
        prefixCls="ant-btn"
      >
        <CSSMotion
          motionName="ant-btn-loading-icon-motion"
          onAppearActive={[Function]}
          onAppearStart={[Function]}
          onEnterActive={[Function]}
          onEnterStart={[Function]}
          onLeaveActive={[Function]}
          onLeaveStart={[Function]}
          removeOnLeave={true}
          visible={false}
        >
          <DomWrapper />
        </CSSMotion>
      </LoadingIcon>
      <ForwardRef(UploadOutlined)
        key=".0"
      >
        <AntdIcon
          icon={
            Object {
              "icon": Object {
                "attrs": Object {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": Array [
                  Object {
                    "attrs": Object {
                      "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "upload",
              "theme": "outlined",
            }
          }
        >
          <span
            aria-label="upload"
            className="anticon anticon-upload"
            role="img"
          >
            <IconReact
              icon={
                Object {
                  "icon": Object {
                    "attrs": Object {
                      "focusable": "false",
                      "viewBox": "64 64 896 896",
                    },
                    "children": Array [
                      Object {
                        "attrs": Object {
                          "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                        },
                        "tag": "path",
                      },
                    ],
                    "tag": "svg",
                  },
                  "name": "upload",
                  "theme": "outlined",
                }
              }
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                key="svg-upload"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                  key="svg-upload-svg-0"
                />
              </svg>
            </IconReact>
          </span>
        </AntdIcon>
      </ForwardRef(UploadOutlined)>
      <span
        key=".1"
      >
        单击上传
      </span>
    </button>
  </Wave>
</Button>
`;

exports[`ProFormUpload 🏐 ProFormUploadButton support disable 2`] = `
<Button
  disabled={true}
  type="dashed"
>
  <Wave>
    <button
      className="ant-btn ant-btn-dashed"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <LoadingIcon
        existIcon={false}
        loading={false}
        prefixCls="ant-btn"
      >
        <CSSMotion
          motionName="ant-btn-loading-icon-motion"
          onAppearActive={[Function]}
          onAppearStart={[Function]}
          onEnterActive={[Function]}
          onEnterStart={[Function]}
          onLeaveActive={[Function]}
          onLeaveStart={[Function]}
          removeOnLeave={true}
          visible={false}
        >
          <DomWrapper />
        </CSSMotion>
      </LoadingIcon>
      <ForwardRef(UploadOutlined)
        key=".0"
      >
        <AntdIcon
          icon={
            Object {
              "icon": Object {
                "attrs": Object {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": Array [
                  Object {
                    "attrs": Object {
                      "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "upload",
              "theme": "outlined",
            }
          }
        >
          <span
            aria-label="upload"
            className="anticon anticon-upload"
            role="img"
          >
            <IconReact
              icon={
                Object {
                  "icon": Object {
                    "attrs": Object {
                      "focusable": "false",
                      "viewBox": "64 64 896 896",
                    },
                    "children": Array [
                      Object {
                        "attrs": Object {
                          "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                        },
                        "tag": "path",
                      },
                    ],
                    "tag": "svg",
                  },
                  "name": "upload",
                  "theme": "outlined",
                }
              }
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                key="svg-upload"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                  key="svg-upload-svg-0"
                />
              </svg>
            </IconReact>
          </span>
        </AntdIcon>
      </ForwardRef(UploadOutlined)>
      <span
        key=".1"
      >
        单击上传
      </span>
    </button>
  </Wave>
</Button>
`;

exports[`ProFormUpload 🏐 ProFormUploadButton support disable 3`] = `
<Button
  disabled={true}
>
  <Wave>
    <button
      className="ant-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <LoadingIcon
        existIcon={false}
        loading={false}
        prefixCls="ant-btn"
      >
        <CSSMotion
          motionName="ant-btn-loading-icon-motion"
          onAppearActive={[Function]}
          onAppearStart={[Function]}
          onEnterActive={[Function]}
          onEnterStart={[Function]}
          onLeaveActive={[Function]}
          onLeaveStart={[Function]}
          removeOnLeave={true}
          visible={false}
        >
          <DomWrapper />
        </CSSMotion>
      </LoadingIcon>
      <ForwardRef(UploadOutlined)
        key=".0"
      >
        <AntdIcon
          icon={
            Object {
              "icon": Object {
                "attrs": Object {
                  "focusable": "false",
                  "viewBox": "64 64 896 896",
                },
                "children": Array [
                  Object {
                    "attrs": Object {
                      "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                    },
                    "tag": "path",
                  },
                ],
                "tag": "svg",
              },
              "name": "upload",
              "theme": "outlined",
            }
          }
        >
          <span
            aria-label="upload"
            className="anticon anticon-upload"
            role="img"
          >
            <IconReact
              icon={
                Object {
                  "icon": Object {
                    "attrs": Object {
                      "focusable": "false",
                      "viewBox": "64 64 896 896",
                    },
                    "children": Array [
                      Object {
                        "attrs": Object {
                          "d": "M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z",
                        },
                        "tag": "path",
                      },
                    ],
                    "tag": "svg",
                  },
                  "name": "upload",
                  "theme": "outlined",
                }
              }
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                key="svg-upload"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                  key="svg-upload-svg-0"
                />
              </svg>
            </IconReact>
          </span>
        </AntdIcon>
      </ForwardRef(UploadOutlined)>
      <span
        key=".1"
      >
        单击上传
      </span>
    </button>
  </Wave>
</Button>
`;
